@@ -19,6 +19,7 @@ package de.adorsys.psd2.consent.psu.api.config;
 public class CmsPsuApiDefaultValue {
     public static final String DEFAULT_SERVICE_INSTANCE_ID = "UNDEFINED";
 
-    public CmsPsuApiDefaultValue() {
+    private CmsPsuApiDefaultValue() {
+        // This class is default static value container, it'll never be instantiated
     }
 }
